# demand-forecasting

./: Dockerfile  app.py  pyproject.toml  requirements.txt
data/processed/: cleaned_PJMW_hourly.csv  test_data.csv
notebooks/: eda.ipynb
src/feature_engineer/: feature_engineering.py
src/model/: inference.py  load_model.py
src/preprocess/: preprocess.py
src/utils/: load_file.py  logger.py  seasonal_decompose.py  visualization.py
