[project]
name = "demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "holidays>=0.66",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "logging>=0.4.9.6",
    "missingno>=0.5.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "skore>=0.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.0",
    "streamlit-extras>=0.5.0",
    "xgboost>=2.1.4",
]
